Fixed field alignments

--- a/src/main/resources/static/css/global.css
+++ b/src/main/resources/static/css/global.css
@@ -11,6 +11,16 @@ body {
     height: 100vh;
 }
 
+label {
+    display: inline-block;
+    width: 110px;
+    color: white;
+}
+input {
+    padding: 5px 10px;
+}
+
+
 .banner {
     color: white;
     display: flex;
@@ -18,6 +28,13 @@ body {
     justify-content: center;
     margin-top: 25px;
     text-shadow: -1px 0 black, 0 4px black, 4px 0 black, 0 -1px black;
+}
+
+.action-banner {
+    font-family: 'Paytone One', Arial, serif;
+    width: 60%;
+    text-align: center;
+    font-size: 30px;
 }
 
 /*--------------------------------------------NAV BAR-----------------------------------------*/
@@ -110,7 +127,7 @@ body {
 
 /*------------------------Containers for forms and profile------------------*/
 .container {
-    margin-top: 40px;
+    margin-top: 20px;
     display: flex;
     position: relative;
     justify-content: center;
@@ -124,7 +141,7 @@ body {
 .container .card {
     position: relative;
     width: 600px;
-    height: 650px;
+    height: 700px;
     box-shadow: 20px 20px 50px rgba(0, 0, 0, 0.5);
     border-radius: 15px;
     background: rgba(0, 0, 0, 0.5);
